Changes with Brian
moo

--- a/GoldenEagleOrganics/about.html
+++ b/GoldenEagleOrganics/about.html
@@ -25,7 +25,7 @@
 <body>
     <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
         <a href="index.html">
-            <img src="GEOPics/GEOCrest.png" width="100" />
+            <img src="GEOPics/GEOCrest.png" width="150" />
         </a>
         GOLDEN EAGLE ORGANICS, INC.
     </div>
@@ -61,11 +61,10 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="lamb.html">- Lamb -</a></li>
                             <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="hay.html">- Hay -</a></li>
-                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
                             <li><a href="farming.html">- Custom Farming -</a></li>
                         </ul>
                     </li>
@@ -146,43 +145,9 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="GEOPics/nick01.jpg" alt="">
-                        <h3>
-                            Nick Covey
-                        </h3>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                        <h3>
-                            Justin Dunham
-                        </h3>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                        <h3>
-                            Ryan Moore
-                        </h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="GEOPics/gus01.jpg" alt="">
-                        <h3>
-                            Gus Lepore
-                        </h3>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="GEOPics/claudia01.jpg" alt="">
-                        <h3>
-                            Claudia Lepore
-                        </h3>
-                    </div>
-                    <div class="col-sm-4 text-center">
-                        <img class="img-responsive" src="GEOPics/bodhi01.jpg" alt="">
-                        <h3>
-                            Bodhi The Dog
-                        </h3>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8 text-center">
+                        <img class="img-responsive" src="GEOPics/staff01.jpg" alt="">
                     </div>
                 </div>
                 <div class="clearfix"></div>
