--- a/GoldenEagleOrganics/beef.html
+++ b/GoldenEagleOrganics/beef.html
@@ -25,7 +25,7 @@
 <body>
     <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
         <a href="index.html">
-            <img src="GEOPics/GEOCrest.png" width="100" />
+            <img src="GEOPics/GEOCrest.png" width="150" />
         </a>
         GOLDEN EAGLE ORGANICS, INC.
     </div>
@@ -61,11 +61,10 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="lamb.html">- Lamb -</a></li>
                             <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="hay.html">- Hay -</a></li>
-                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
                             <li><a href="farming.html">- Custom Farming -</a></li>
                         </ul>
                     </li>
@@ -95,17 +94,17 @@
                         <!-- Indicators -->
                         <ol class="carousel-indicators" style="z-index: 1">
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                            <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="4"></li>-->
                         </ol>
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive pic-preview" src="GEOPics/beef01.jpg" style="width: 100%" title="" alt="">
+                                <img class="img-responsive pic-preview" src="GEOPics/steer01.jpg" style="width: 100%" title="" alt="">
                             </div>
-                            <div class="item">
+                            <!--<div class="item">
                                 <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
                             </div>
                             <div class="item">
@@ -116,7 +115,7 @@
                             </div>
                             <div class="item">
                                 <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
-                            </div>
+                            </div>-->
                         </div>
                         <!-- Controls -->
                         <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -128,20 +127,10 @@
                 <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
                     <h3 style="margin-top: 10px">GEO's Beef</h3>
                     <p>
-                        Raising cows is a new part of growth for our business, but it has been quite enjoyable and a profitable
-                        experience. Beef can be cut into rib eye steaks, roasts, hanger steaks, short ribs, rump steaks or sirloin
-                        steaks. And often prepared by roasting, grilling, broiling or barbeueing.
+                        What more do we have to say about beef? Beef is Americas choice in meat selection. GEO will be including 100% grass fed and finished certified organic Steers
+                        into our grazing program soon. Stay tuned to our web site
+                        and <a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel" style="color: #B88D47">Facebook page</a>.
                     </p>
-                    <h3>What We Do</h3>
-                    <p>
-                        In keeping with USDA Organic approved regulations, and our own personal caring touch around the farm, GEO
-                        strives to maintain a high standard of organic meats with competitive prices. Our cows are 100% grass fed
-                        and given adequate shelter and fields to roam freely. It is our goal at GEO to earn your seal of approval
-                        with our livestock.
-                    </p>
-                    <br />
-                    <p>Interested in buying from GEO? Click the button below to contact us!</p>
-                    <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
                 </div>
             </div>
         </div>
