--- a/GoldenEagleOrganics/goat.html
+++ b/GoldenEagleOrganics/goat.html
@@ -25,7 +25,7 @@
 <body>
     <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
         <a href="index.html">
-            <img src="GEOPics/GEOCrest.png" width="100" />
+            <img src="GEOPics/GEOCrest.png" width="150" />
         </a>
         GOLDEN EAGLE ORGANICS, INC.
     </div>
@@ -61,11 +61,10 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="lamb.html">- Lamb -</a></li>
                             <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="hay.html">- Hay -</a></li>
-                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
                             <li><a href="farming.html">- Custom Farming -</a></li>
                         </ul>
                     </li>
@@ -126,18 +125,32 @@
                     </div>
                 </div>
                 <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-                    <h3 style="margin-top: 10px">GEO's Chevon</h3>
+                    <h3 style="margin-top: 10px">Chevon</h3>
                     <p>
-                        Often called Chevon when the meat comes from adult goats, and Cabrito or kid when from younger goats.
-                        Chevon is savory and less sweet than beef, but slightly sweeter than lamb. It can be prepared in a
-                        variety of ways, such as barbequed, stewed, minced, curried, grilled, fried, baked or made into sausage.
+                        Chevon is Goat meat. Chevon can be eaten from any goat at any age in its development, depending on personal preference.
+                        Most chefs and consumers prefer Chevon from goats that are one to four years old and weigh at least 110 pounds. This
+                        tends to yield the most tender meat. Chevon is the most widely consumed red meat in the world and Chevon is also sought after for its exceptional nutrional value.
                     </p>
-                    <h3>What We Do</h3>
+                    <p style="text-align: center">(Click the table and the links below to find out more about goats and goat meat)</p>
+                    <a href="http://abga.org/abga-education/nutritional-facts/" target="_blank"><img src="GEOPics/meatTable.jpg" width="100%" /></a>
+                    <a href="http://abga.org/abga-education/goat-anatomy/" target="_blank"><p style="color: #B88D47; text-align: center; margin-top: 15px" target="_blank">American Boer Goat Association</p></a>
+                    <a href="http://vermontchevon.com/about-vermont-chevon/faqs/" target="_blank"><p style="color: #B88D47; text-align: center" target="_blank">Vermont Chevon</p></a>
+                    <h3>GEO's Goats</h3>
                     <p>
-                        In keeping with USDA Organic approved regulations, and our own personal caring touch around the farm, GEO
-                        strives to maintain a high standard of organic meats with competitive prices. Our goats are 100% grass fed
-                        and given adequate shelter and fields to roam freely. It is our goal at GEO to earn your seal of approval
-                        with our livestock.
+                        Our goat meat is USDA certified organic by Oregon Tilth. That means we never use herbicides or synthetic chemicals in
+                        our pastures, and your meat animals have never been given antibiotics or harsh chemicals.
+
+                    </p>
+                    <p>
+                        During the growing season our
+                        goats are always out on pasture and during the winter, they have access to the outdoors and protection from the elements.
+                        At GEO, we use a managed intensive rotational grazing system (MIRG) to maintain the health of our animals and our pastures, to
+                        ensure the highest nutrional feed quality.
+                    </p>
+                    <p>
+                        While MIRG is one of the best ways to maintain the health of the animals in an organic system, occasionally we do use modern medicines
+                        save the life of an animal. In that case we sell that animal into a non-organic market.
+                        In the case that the animal needs more intensive medicines to save its life and maintain it's health, we will remove the animal
                     </p>
                     <br />
                     <p>Interested in buying from GEO? Click the button below to contact us!</p>
