--- a/GoldenEagleOrganics/hay.html
+++ b/GoldenEagleOrganics/hay.html
@@ -25,7 +25,7 @@
 <body>
     <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
         <a href="index.html">
-            <img src="GEOPics/GEOCrest.png" width="100" />
+            <img src="GEOPics/GEOCrest.png" width="150" />
         </a>
         GOLDEN EAGLE ORGANICS, INC.
     </div>
@@ -61,11 +61,10 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="lamb.html">- Lamb -</a></li>
                             <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="hay.html">- Hay -</a></li>
-                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
                             <li><a href="farming.html">- Custom Farming -</a></li>
                         </ul>
                     </li>
@@ -86,7 +85,6 @@
                     <hr>
                     <h2 class="intro-text text-center">
                         <strong>Hay</strong>
-                        Products
                     </h2>
                     <hr>
                 </div>
@@ -99,11 +97,13 @@
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+
                         </ol>
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive pic-preview" src="GEOPics/hay01.jpg" style="width: 100%" title="" alt="">
+                                <img class="img-responsive pic-preview" src="GEOPics/alfalfa02.jpg" style="width: 100%" title="" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive pic-preview" src="GEOPics/hay02.jpg" style="width: 100%" title="" alt="">
@@ -112,10 +112,13 @@
                                 <img class="img-responsive pic-preview" src="GEOPics/hay03.jpg" style="width: 100%" title="" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive pic-preview" src="GEOPics/hay04.jpg" style="width: 100%" title="" alt="">
+                                <img class="img-responsive pic-preview" src="GEOPics/alfalfa05.jpg" style="width: 100%" title="" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive pic-preview" src="GEOPics/hay05.jpg" style="width: 100%" title="" alt="">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/geo03.jpg" style="width: 100%" title="" alt="">
                             </div>
                         </div>
                         <!-- Controls -->
@@ -128,21 +131,31 @@
                 <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
                     <h3 style="margin-top: 10px">GEO's Hay</h3>
                     <p>
-                        We take pride in ensuring our hay is kept dry and harvested from our fields in a timely manner.
-                        Good quality hay is green and not too coarse, and includes plant heads and leaves as well as stems. Hay can
-                        be used as animal fodder when or where there is not enough pasture or rangeland on which to graze your livestock.
-
+                        At GEO we strive to produce the highest quality organic and conventional hays. Most of our hay is in two-string
+                        70-90 lb bales. We are currently producing certified organic hay from 30 acres of ground, transitional organic hay
+                        from 40 acres and conventional grass hay on 70 acres.
                     </p>
-                    <h3>What We Do</h3>
+                    <h3>Certified Organic & Transitional Organic Hay</h3>
                     <p>
-                        In keeping with Oregon Tilth approved regulations, and our own personal caring touch around the farm, GEO
-                        strives to maintain a high standard of grasses and fields, with competitive prices. Our mission it to continue
-                        to provide 100% weed free hay and prompt delivery service. It is our goal at GEO to earn your seal of approval
-                        with our hay.
+                        In 2016 we are producing 12 acres of certified organic <a href="http://teffgrass.com/" style="color: #b88d47" target="_blank">teff hay</a>,
+                        and 18 acres of mixed-species pasture, which we mow as part of our grazing program. We also have 40 acres of alfalfa in its
+                        last year of transition to organic. All of our organic and transitional fields are fertilized with manures and we never use
+                        herbicides or pesticides of any sorts, in accordance with the <a href="https://www.ams.usda.gov/about-ams/programs-offices/national-organic-program" style="color: #b88d47" target="_blank">National Organic Program Standards</a>.
+                    </p>
+                    <h3>Conventional Grass Hay</h3>
+                    <p>
+                        We do not spray our grass fields with herbicides or pesticides. Weeds are generally pretty low in our fields and
+                        we keep the weed content low through regular mowing, and maintaining fertility with conventional fertilizers.
+                    </p>
+                    <h3>Hay Delivery</h3>
+                    <p>
+                        Most of our hay is available at our <a href="https://www.google.com/maps/place/15710+US-97,+Culver,+OR+97734/@44.407705,-121.2117732,14z/data=!4m13!1m7!3m6!1s0x54bed77ca2d47d79:0xa726c8165bfea37!2s15710+US-97,+Culver,+OR+97734!3b1!8m2!3d44.4088496!4d-121.1988332!3m4!1s0x54bed77ca2d47d79:0xa726c8165bfea37!8m2!3d44.4088496!4d-121.1988332?hl=en" style="color: #b88d47" target="_blank">Culver location</a>, where we'll sell you hay by the bale or the truck load.
+                        We also deliver hay from Central Oregon to the Oregon coast. Give us a call for pricing!
                     </p>
                     <br />
-                    <p>Interested in buying from GEO? Click the button below to contact us!</p>
+                    <p>Interested in buying from GEO? Click the button below to contact us! Look for our Craigslist ads on our Facebook page.</p>
                     <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
+                    <a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel" style="color: white" class="btn btn-sm btn-primary">Facebook Ad Posts</a></a>
                 </div>
             </div>
         </div>
