--- a/GoldenEagleOrganics/index.html
+++ b/GoldenEagleOrganics/index.html
@@ -25,7 +25,7 @@
 <body>
     <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
         <a href="index.html">
-            <img src="GEOPics/GEOCrest.png" width="100" />
+            <img src="GEOPics/GEOCrest.png" width="150" />
         </a>
         GOLDEN EAGLE ORGANICS, INC.
     </div>
@@ -61,11 +61,10 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="lamb.html">- Lamb -</a></li>
                             <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="hay.html">- Hay -</a></li>
-                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
                             <li><a href="farming.html">- Custom Farming -</a></li>
                         </ul>
                     </li>
@@ -149,14 +148,6 @@
             </div>
             <div class="col-md-4">
                 <div class="product-overlay">
-                    <a href="beef.html">
-                        <img src="GEOPics/beef01.jpg" width="100%" />
-                        <h2 class="hvr-bob">- Beef -</h2>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="product-overlay">
                     <a href="lamb.html">
                         <img src="GEOPics/lamb01.jpg" width="100%" />
                         <h2 class="hvr-bob">- Lamb -</h2>
@@ -168,6 +159,14 @@
                     <a href="goat.html">
                         <img src="GEOPics/goat01.jpg" width="100%" />
                         <h2 class="hvr-bob">- Goat -</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="product-overlay">
+                    <a href="beef.html">
+                        <img src="GEOPics/steer01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Beef -</h2>
                     </a>
                 </div>
             </div>
@@ -183,7 +182,7 @@
             </div>
             <div class="col-md-6">
                 <div class="product-overlay">
-                    <a href="alfalfa.html">
+                    <a href="hay.html">
                         <img src="GEOPics/alfalfa05.jpg" width="100%" />
                         <h2 class="hvr-bob">- Alfalfa -</h2>
                     </a>
