--- a/GoldenEagleOrganics/lamb.html
+++ b/GoldenEagleOrganics/lamb.html
@@ -25,7 +25,7 @@
 <body>
     <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
         <a href="index.html">
-            <img src="GEOPics/GEOCrest.png" width="100" />
+            <img src="GEOPics/GEOCrest.png" width="150" />
         </a>
         GOLDEN EAGLE ORGANICS, INC.
     </div>
@@ -61,11 +61,10 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="lamb.html">- Lamb -</a></li>
                             <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="hay.html">- Hay -</a></li>
-                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
                             <li><a href="farming.html">- Custom Farming -</a></li>
                         </ul>
                     </li>
@@ -126,19 +125,28 @@
                     </div>
                 </div>
                 <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-                    <h3 style="margin-top: 10px">GEO's Lamb</h3>
+                    <h3 style="margin-top: 10px">Lamb</h3>
                     <p>
-                        We highly enjoy raising our lamb on the farm, because they grow up with so much unique personality and comical
-                        sounds of laughter. Lamb, Hogget, and Mutton are meat names of domestic sheep at different ages. Younger Lamb
-                        are smaller and more tender. Mutton is meat from a sheep over two years old, and has less tender meat. In
-                        general, the darker the color of meat, the older the animal.
+                        Lamb is a flavorful, nutrient-rich food and an excellent source of Vitamin B12, niacin, zinc, and selenium. A 3-ounce serving of lamb provides nearly 5 times the
+                        essential omega-3 fatty acids and alpha linoleic acid of a 3-ounce serving of beef.
                     </p>
-                    <h3>What We Do</h3>
+                    <a href="GEOPics/lambCuts.jpg"><img src="GEOPics/lambCuts.jpg"/ width="100%"></a>
+                    <p style="text-align: center">For more information about lamb, visit: <a style="color: #B88D47; text-align: center; margin-top: 15px" href="http://www.americanlamb.com/" target="_blank">American Lamb</a></p>
+                    <h3>GEO's Lamb</h3>
                     <p>
-                        In keeping with USDA Organic approved regulations, and our own personal caring touch around the farm, GEO
-                        strives to maintain a high standard of organic meats with competitive prices. Our lamb are 100% grass fed
-                        and given adequate shelter and fields to roam freely. It is our goal at GEO to earn your seal of approval
-                        with our livestock.
+                        Our lamb meat is USDA certified organic by Oregon Tilth. That means we never use herbicides or synthetic chemicals in
+                        our pastures, and your meat animals have never been given antibiotics or harsh chemicals.
+
+                    </p>
+                    <p>
+                        During the growing season our lamb are always out on pasture and during the winter, they have access to the outdoors and protection from the elements.
+                        At GEO, we use a Managed Intensive Rotational Grazing (MIRG) system to maintain the health of our animals and our pastures, to
+                        ensure the highest nutrional feed quality.
+                    </p>
+                    <p>
+                        While MIRG is one of the best ways to maintain the health of the animals in an organic system, occasionally we do use modern medicines
+                        save the life of an animal. In that case we sell that animal into a non-organic market.
+                        In the case that the animal needs more intensive medicines to save its life and maintain it's health, we will remove the animal
                     </p>
                     <br />
                     <p>Interested in buying from GEO? Click the button below to contact us!</p>
