--- a/GoldenEagleOrganics/farming.html
+++ b/GoldenEagleOrganics/farming.html
@@ -25,7 +25,7 @@
 <body>
     <div class="brand" style="font-family: 'Times New Roman', Times, serif;">
         <a href="index.html">
-            <img src="GEOPics/GEOCrest.png" width="100" />
+            <img src="GEOPics/GEOCrest.png" width="150" />
         </a>
         GOLDEN EAGLE ORGANICS, INC.
     </div>
@@ -61,11 +61,10 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="lamb.html">- Lamb -</a></li>
                             <li><a href="goat.html">- Goat -</a></li>
+                            <li><a href="beef.html">- Beef -</a></li>
                             <li><a href="hay.html">- Hay -</a></li>
-                            <li><a href="alfalfa.html">- Alfalfa -</a></li>
                             <li><a href="farming.html">- Custom Farming -</a></li>
                         </ul>
                     </li>
@@ -99,6 +98,7 @@
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="5"></li>
                         </ol>
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
@@ -117,6 +117,9 @@
                             <div class="item">
                                 <img class="img-responsive pic-preview" src="GEOPics/custFarmServ05.jpg" style="width: 100%" title="" alt="">
                             </div>
+                            <div class="item">
+                                <img class="img-responsive pic-preview" src="GEOPics/geo09.gif" style="width: 100%" title="" alt="">
+                            </div>
                         </div>
                         <!-- Controls -->
                         <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -126,15 +129,10 @@
                     </div>
                 </div>
                 <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-                    <h3 style="margin-top: 10px">GEO's Custom Farming</h3>
+                    <h3 style="margin-top: 10px">Custom Services</h3>
                     <p>
-                        Short custom farming description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
-                    </p>
-                    <h3>What We Do</h3>
-                    <p>
-                        Short custom farming description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
-                        eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+                        GEO offers hay services for hire. We cut, rake, bale and stack two-tie small bales. We also can plant your
+                        pastures and hay fields with our no-till drill.
                     </p>
                     <br />
                     <p>Interested in hiring services from GEO? Click the button below to contact us!</p>
