Fixed Owners pic
moo

--- a/GoldenEagleOrganics/about.html
+++ b/GoldenEagleOrganics/about.html
@@ -90,7 +90,7 @@
                     <hr>
                 </div>
                 <div class="col-md-12">
-                    <img class="img-responsive img-border-left" src="GEOPics/owners01.jpg" style="float: right; padding-left: 10px" alt="Picture of the GEO Owners">
+                    <img class="img-responsive img-border-left" src="GEOPics/owners01.JPG" style="float: right; padding-left: 10px" alt="Picture of the GEO Owners">
                     <p>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Lepore Family (Brian, Emily, Gus, Claudia and Bodhi the dog) migrated to
                         Central Oregon from East-Central Indiana in 2012. Brian spent the previous decade researching and teaching agricultural
